--- a/style.css
+++ b/style.css
@@ -6,20 +6,21 @@ body{
 .out{
     width: 1040px;
     margin: 10px auto;
-    display: flex;
-    flex-direction: row
+    background: #E1E2E6;
+    border: 1px solid #E1E2E6;
+    box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.75);
+    position: relative;
 }
-.out .aside-left{
+
+.out .asideLeft{
     width: 35%;
     background: #659C9F;
-    border: 1px solid red;
+    border: 1px solid #659C9F;
+    margin-left: 20px;
+    margin-top: -173px;
 }
-.out .aside-right{
-    width: 65%;
-    background: #E1E1E6;
-    border: 1px solid red;
-}
-.out .aside-left .photo{
+
+.out .asideLeft .photo{
     width: 230px;
     height: 250px;
     border: 4px solid #FFFDFA;
@@ -27,11 +28,11 @@ body{
     margin: 30px auto;
     overflow: hidden;
 }
-.out .aside-left .photo img{
+.out .asideLeft .photo img{
     width: 240px;
     height: 290px;
 }
-p{
+.out .asideLeft .p{
     width: 300px;
     height: 26px;
     background: #42474B;
@@ -91,4 +92,72 @@ p{
 }
 a{
     text-decoration: none;
+}
+.out .header{
+    color: #FFFDFA;
+    background: #2C3437;
+    width: 100%;
+    height: 150px;
+    margin-top: 20px;
+    padding-top: 2px;
+}
+.out .header h1,p{
+    margin-left: 39%;
+    color: #E0E3E8;
+    font-family: STKaiti;
+}
+.out .header p{
+    font-size: 20px;
+    margin-top: -20px;
+}
+.out .main{
+    width: 60%;
+    height: 1000px;
+    position: absolute;
+    left: 38.5%;
+    top: 18%;
+    box-sizing: border-box;
+}
+.out .main .aboutMe{
+    position: relative;
+}
+.out .main .aboutMe .person{
+    display: inline-block;
+    position: absolute;
+    top: -6%;
+    left: 94%;
+}
+.out .main .aboutMe .p{
+    margin-left: 0px;
+    width: 100%;
+    height: 30px;
+    padding-top: 4px;
+    background: #42474B;
+    font-size: 20px;
+    font-family: STKaiti;
+    color: #FFFDFA;
+}
+.out .main .aboutMe p{
+    width: 100%;
+    margin-left: 0;
+    color: #42474B;
+    font-family: KaiTi_GB2312;
+    font-weight: bold;
+    font-size: 18px;
+}
+.out .main .profile .p{
+    margin-left: 0px;
+    width: 100%;
+    height: 30px;
+    padding-top: 4px;
+    background: #42474B;
+    font-size: 20px;
+    font-family: STKaiti;
+    color: #FFFDFA;
+}
+.out .main .profile .person{
+    display: inline-block;
+    position: absolute;
+    top: 16%;
+    left: 94%;
 }
