--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 .out{
     width: 1040px;
-    margin: 10px auto;
+    margin: 5px auto;
     background: #E1E2E6;
     border: 1px solid #E1E2E6;
     box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.75);
@@ -14,6 +14,7 @@ body{
 
 .out .asideLeft{
     width: 35%;
+    height: 100%;
     background: #659C9F;
     border: 1px solid #659C9F;
     margin-left: 20px;
@@ -74,8 +75,8 @@ body{
     margin: 25px auto;
 }
 .skill dt{
-    margin-top: 20px;
-    padding-bottom: 6px;
+    margin-top: 25px;
+    padding-bottom: 10px;
 }
 .skill dd{
     height: 5px;
@@ -112,10 +113,9 @@ a{
 }
 .out .main{
     width: 60%;
-    height: 1000px;
     position: absolute;
     left: 38.5%;
-    top: 18%;
+    top: 14.5%;
     box-sizing: border-box;
 }
 .out .main .aboutMe{
@@ -158,7 +158,7 @@ a{
 .out .main .profile .person{
     display: inline-block;
     position: absolute;
-    top: 16%;
+    top: 15%;
     left: 94%;
 }
 .out .main .profile h4{
@@ -180,4 +180,29 @@ a{
 }
 .out .main .profile .works .code dd{
     margin: 8px 0;
+}
+.out .main .experience .p{
+    margin-left: 0px;
+    margin-top: 25px;
+    width: 100%;
+    height: 30px;
+    padding-top: 4px;
+    background: #42474B;
+    font-size: 20px;
+    font-family: STKaiti;
+    color: #FFFDFA;
+}
+.out .main .experience .person{
+    display: inline-block;
+    position: absolute;
+    top: 86%;
+    left: 94%;
+}
+.out .main .experience p{
+    width: 100%;
+    margin-left: 0;
+    color: #42474B;
+    font-family: KaiTi_GB2312;
+    font-weight: bold;
+    font-size: 18px;
 }
