--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 .out{
     width: 1040px;
-    margin: 5px auto;
+    margin: 3px auto;
     background: #E1E2E6;
     border: 1px solid #E1E2E6;
     box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.75);
@@ -158,7 +158,7 @@ a{
 .out .main .profile .person{
     display: inline-block;
     position: absolute;
-    top: 15%;
+    top: 11%;
     left: 94%;
 }
 .out .main .profile h4{
@@ -195,14 +195,11 @@ a{
 .out .main .experience .person{
     display: inline-block;
     position: absolute;
-    top: 86%;
+    top: 82%;
     left: 94%;
 }
-.out .main .experience p{
-    width: 100%;
-    margin-left: 0;
-    color: #42474B;
-    font-family: KaiTi_GB2312;
-    font-weight: bold;
+
+.out .main .experience .job pre{
     font-size: 18px;
+    font-family: KaiTi_GB2312;
 }
