--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ a{
     margin: 12px 0;
 }
 .out .main .profile .p{
-    margin-bottom: -40px;
+    margin-bottom: -42px;
     width: 100%;
     height: 30px;
     padding-top: 4px;
@@ -180,9 +180,11 @@ a{
 .out .main .profile .works .code dd{
     margin: 8px 0;
 }
+.out .main .experience{
+    height: 160px;
+}
 .out .main .experience .p{
-    margin-left: 0px;
-    margin-top: 20px;
+    margin-top: 15px;
     width: 100%;
     height: 30px;
     padding-top: 4px;
@@ -200,7 +202,7 @@ a{
 
 .out .main .experience .box{
     position: relative;
-    top: -31px;
+    top: -41px;
     left: 0;
 }
 .out .main .experience .box p{
