--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     width: 1040px;
     margin: 3px auto;
     background: #E1E2E6;
-    border: 1px solid #E1E2E6;
+    border: 1px solid #292727;
     box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.75);
     position: relative;
 }
